# kanakku-pulla

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  fly.toml  supervisord.conf
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  main.py  seed.py
backend/app/api/: ai_activity.py  alerts.py  analytics.py  auth.py  cards.py  inboxes.py  statements.py  transactions.py  webhooks.py
backend/app/models/: __init__.py  ai_activity.py  alert.py  category.py  credit_card.py  inbox.py  merchant_cache.py  reward_points.py  statement.py  transaction.py  user.py
backend/app/parsers/: amex.py  axis.py  base.py  hdfc.py  icici.py  registry.py  sbi.py
backend/app/schemas/: alerts.py  cards.py  statements.py  transactions.py
backend/app/services/: ai_activity_logger.py  ai_analyzer.py  alert_engine.py  inbox_service.py
backend/tests/: test_amex_parser.py
docs/: PLAN.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/statements/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/components/: ai-activity-feed.tsx  app-sidebar.tsx  category-pill.tsx  client-layout.tsx  filter-chips.tsx  stat-card.tsx
frontend/src/lib/: api.ts  auth.ts
