[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanakku-pulla"
version = "0.1.0"
description = "AI-powered credit card statement analyzer for Indian banks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pdfplumber>=0.11.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "agentmail>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
